RESOLVED FIXED22627
fast/workers/worker-terminate.html fails randomly
https://bugs.webkit.org/show_bug.cgi?id=22627
Summary fast/workers/worker-terminate.html fails randomly
Alexey Proskuryakov
Reported 2008-12-03 07:38:03 PST
This test fails on buildbot sometimes, with empty console messages being printed. The reason is that worker termination uses timeouts, and when a script is terminated due to a timeout, an exception is raised. We shouldn't report exceptions coming from workers that are being terminated.
Attachments
proposed fix (3.69 KB, patch)
2008-12-03 07:44 PST, Alexey Proskuryakov
mrowe: review+
Alexey Proskuryakov
Comment 1 2008-12-03 07:44:46 PST
Created attachment 25710 [details] proposed fix
Mark Rowe (bdash)
Comment 2 2008-12-03 07:51:43 PST
Comment on attachment 25710 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2008-12-03 07:57:40 PST
Committed revision 38943.
Note You need to log in before you can comment on or make changes to this bug.