        Reviewed by Mark Rowe.

https://bugs.webkit.org/show_bug.cgi?id=22627
        fast/workers/worker-terminate.html fails randomly

        The problem is that worker termination uses script timeouts, so an InterruptedExecutionError
        is raised, and it sometimes reaches the main thread.

        * dom/WorkerMessagingProxy.cpp:
        (WebCore::WorkerExceptionTask::create):
        (WebCore::WorkerExceptionTask::WorkerExceptionTask):
        (WebCore::WorkerExceptionTask::performTask):
        (WebCore::WorkerMessagingProxy::postWorkerException):
        * dom/WorkerMessagingProxy.h:
        Ignore exceptions that happen in terminated workers.



Canonical link: https://commits.webkit.org/31150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38943 268f45cc-cd09-0410-ab3c-d52691b4dbfc