WebCore/dom/WorkerMessagingProxy.cpp
@@ -114,28 +114,31 @@ private:
 
 class WorkerExceptionTask : public ScriptExecutionContext::Task {
 public:
-    static PassRefPtr<WorkerExceptionTask> create(const String& errorMessage, int lineNumber, const String& sourceURL)
+    static PassRefPtr<WorkerExceptionTask> create(const String& errorMessage, int lineNumber, const String& sourceURL, WorkerMessagingProxy* messagingProxy)
     {
-        return adoptRef(new WorkerExceptionTask(errorMessage, lineNumber, sourceURL));
+        return adoptRef(new WorkerExceptionTask(errorMessage, lineNumber, sourceURL, messagingProxy));
     }
 
 private:
-    WorkerExceptionTask(const String& errorMessage, int lineNumber, const String& sourceURL)
+    WorkerExceptionTask(const String& errorMessage, int lineNumber, const String& sourceURL, WorkerMessagingProxy* messagingProxy)
         : m_errorMessage(errorMessage.copy())
         , m_lineNumber(lineNumber)
         , m_sourceURL(sourceURL.copy())
+        , m_messagingProxy(messagingProxy)
     {
     }
 
     virtual void performTask(ScriptExecutionContext* context)
     {
-        context->reportException(m_errorMessage, m_lineNumber, m_sourceURL);
+        if (!m_messagingProxy->askedToTerminate())
+            context->reportException(m_errorMessage, m_lineNumber, m_sourceURL);
     }
 
 private:
     String m_errorMessage;
     int m_lineNumber;
     String m_sourceURL;
+    WorkerMessagingProxy* m_messagingProxy;
 };
 
 class WorkerContextDestroyedTask : public ScriptExecutionContext::Task {
@@ -225,7 +228,7 @@ void WorkerMessagingProxy::postMessageToWorkerContext(const String& message)
 
 void WorkerMessagingProxy::postWorkerException(const String& errorMessage, int lineNumber, const String& sourceURL)
 {
-    m_scriptExecutionContext->postTask(WorkerExceptionTask::create(errorMessage, lineNumber, sourceURL));
+    m_scriptExecutionContext->postTask(WorkerExceptionTask::create(errorMessage, lineNumber, sourceURL, this));
 }
 
 void WorkerMessagingProxy::workerThreadCreated(PassRefPtr<WorkerThread> workerThread)
