WebCore/dom/WorkerMessagingProxy.h
@@ -64,6 +64,7 @@ namespace WebCore {
     private:
         friend class MessageWorkerTask;
         friend class WorkerContextDestroyedTask;
+        friend class WorkerExceptionTask;
         friend class WorkerThreadActivityReportTask;
 
         ~WorkerMessagingProxy();
